// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`batch swap flow handles all the events: broadcast 1`] = `
{
  "abortedAt": null,
  "abortedBlockIndex": null,
  "chain": "Bitcoin",
  "createdAt": Any<Date>,
  "id": Any<BigInt>,
  "nativeId": 5n,
  "replacedById": null,
  "requestedAt": 1970-01-01T00:00:06.000Z,
  "requestedBlockIndex": "1-280",
  "succeededAt": 1970-01-01T00:00:12.000Z,
  "succeededBlockIndex": "2-296",
  "transactionRef": null,
  "type": "BATCH",
  "updatedAt": Any<Date>,
}
`;

exports[`batch swap flow handles all the events: egress 1`] = `
{
  "amount": "312780",
  "broadcastId": Any<BigInt>,
  "chain": "Bitcoin",
  "createdAt": Any<Date>,
  "id": Any<BigInt>,
  "nativeId": 1n,
  "scheduledAt": 1970-01-01T00:00:06.000Z,
  "scheduledBlockIndex": "1-260",
  "updatedAt": Any<Date>,
}
`;

exports[`batch swap flow handles all the events: fee 0 1`] = `
{
  "amount": "1000",
  "asset": "Eth",
  "id": Any<BigInt>,
  "swapId": Any<BigInt>,
  "type": "INGRESS",
}
`;

exports[`batch swap flow handles all the events: fee 1 1`] = `
{
  "amount": "991100",
  "asset": "Usdc",
  "id": Any<BigInt>,
  "swapId": Any<BigInt>,
  "type": "NETWORK",
}
`;

exports[`batch swap flow handles all the events: fee 2 1`] = `
{
  "amount": "100000000000000",
  "asset": "Eth",
  "id": Any<BigInt>,
  "swapId": Any<BigInt>,
  "type": "LIQUIDITY",
}
`;

exports[`batch swap flow handles all the events: fee 3 1`] = `
{
  "amount": "1485163",
  "asset": "Usdc",
  "id": Any<BigInt>,
  "swapId": Any<BigInt>,
  "type": "LIQUIDITY",
}
`;

exports[`batch swap flow handles all the events: fee 4 1`] = `
{
  "amount": "349476",
  "asset": "Btc",
  "id": Any<BigInt>,
  "swapId": Any<BigInt>,
  "type": "EGRESS",
}
`;

exports[`batch swap flow handles all the events: swap 1`] = `
{
  "ccmDepositReceivedBlockIndex": null,
  "ccmGasBudget": null,
  "ccmMessage": null,
  "createdAt": Any<Date>,
  "depositAmount": "100000000010000000",
  "depositBoostedAt": null,
  "depositBoostedBlockIndex": null,
  "depositReceivedAt": 1970-01-01T00:00:06.000Z,
  "depositReceivedBlockIndex": "1-20",
  "depositTransactionRef": null,
  "destAddress": "mp3QSoPN2iLKrEhdz9Qb9DSJQAuNwDDa77",
  "destAsset": "Btc",
  "effectiveBoostFeeBps": null,
  "egressId": Any<BigInt>,
  "id": Any<BigInt>,
  "intermediateAmount": "990109107",
  "latestSwapScheduledAt": 1970-01-01T00:00:06.000Z,
  "latestSwapScheduledBlockIndex": "1-20",
  "nativeId": 1n,
  "prewitnessedDepositId": null,
  "refundEgressId": null,
  "retryCount": 0,
  "srcAsset": "Eth",
  "swapDepositChannelId": Any<BigInt>,
  "swapExecutedAt": 1970-01-01T00:00:06.000Z,
  "swapExecutedBlockIndex": "1-250",
  "swapInputAmount": "100000000000000000",
  "swapOutputAmount": "662256",
  "type": "SWAP",
  "updatedAt": Any<Date>,
}
`;
